[MENU] Changed the colour and the display position. it still has issues when displaying on mobile divices

--- a/static/menustyle.css
+++ b/static/menustyle.css
@@ -50,6 +50,7 @@ body {
   }
   #sidebar {
     padding-top:0;
+    position: fixed;
   }
 }
 
@@ -93,7 +94,7 @@ body {
     height: 100%;
     margin-left: -250px;
     overflow-y: auto;
-    background: #000;
+    background: #FFFFFF;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
